crates/service/tests/completion/snapshots/features__completion__result__after_paren.snap
---
source: crates/service/tests/completion/result.rs
expression: response
---
[
  {
    "label": "ref",
    "kind": 14
  }
]
