crates/service/tests/completion/snapshots/features__completion__result__ref_type.snap
---
source: crates/service/tests/completion/result.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 8
  },
  {
    "label": "null",
    "kind": 14
  },
  {
    "label": "any",
    "kind": 7
  },
  {
    "label": "eq",
    "kind": 7
  },
  {
    "label": "i31",
    "kind": 7
  },
  {
    "label": "struct",
    "kind": 7
  },
  {
    "label": "array",
    "kind": 7
  },
  {
    "label": "none",
    "kind": 7
  },
  {
    "label": "func",
    "kind": 7
  },
  {
    "label": "nofunc",
    "kind": 7
  },
  {
    "label": "exn",
    "kind": 7
  },
  {
    "label": "noexn",
    "kind": 7
  },
  {
    "label": "extern",
    "kind": 7
  },
  {
    "label": "noextern",
    "kind": 7
  }
]
