crates/service/tests/completion/snapshots/features__completion__result__types.snap
---
source: crates/service/tests/completion/result.rs
expression: response
---
[
  {
    "label": "i32",
    "kind": 7
  },
  {
    "label": "i64",
    "kind": 7
  },
  {
    "label": "f32",
    "kind": 7
  },
  {
    "label": "f64",
    "kind": 7
  },
  {
    "label": "v128",
    "kind": 7
  },
  {
    "label": "funcref",
    "kind": 7
  },
  {
    "label": "externref",
    "kind": 7
  }
]
